--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@types/node": "^18",
-    "nuxt": "^3.5.2"
-  }
+    "nuxt": "^3.5.2",
+    "sass": "^1.62.1"
+  },
+  "packageManager": "pnpm@8.6.1"
 }
