--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@pinia/nuxt": "^0.4.11",
     "@types/node": "^18",
     "nuxt": "^3.5.2",
-    "pinia": "^2.1.3"
+    "pinia": "^2.1.3",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1"
   }
 }
