--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "nuxt": "^3.8.1",
     "pinia": "^2.1.7",
     "sass": "^1.69.5",
-    "sass-loader": "^13.3.2"
+    "sass-loader": "^13.3.2",
+    "typescript": "^5.2.2",
+    "vue-tsc": "^1.8.22"
   },
   "packageManager": "pnpm@8.10.2"
 }
