--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
+    "gh-deploy": "gh-pages -d .output/public",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
     "@pinia/nuxt": "^0.5.1",
     "@types/node": "^20.8.10",
+    "gh-pages": "^6.0.0",
     "nuxt": "^3.8.1",
     "pinia": "^2.1.7",
     "sass": "^1.69.5",
