--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
   },
   "devDependencies": {
     "@pinia/nuxt": "^0.5.1",
-    "@types/node": "^20.8.10",
-    "gh-pages": "^6.0.0",
-    "nuxt": "^3.8.1",
+    "gh-pages": "^6.1.0",
+    "nuxt": "^3.8.2",
     "pinia": "^2.1.7",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
-    "typescript": "^5.2.2",
-    "vue-tsc": "^1.8.22"
+    "typescript": "^5.3.3"
   },
-  "packageManager": "pnpm@8.10.5"
+  "packageManager": "pnpm@8.12.1"
 }
