--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "gh-deploy": "gh-pages -d .output/public",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@pinia/nuxt": "^0.5.1",
-    "gh-pages": "^6.1.0",
-    "nuxt": "^3.8.2",
-    "pinia": "^2.1.7",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
-    "typescript": "^5.3.3"
-  },
-  "packageManager": "pnpm@8.12.1"
+    "nuxt": "^3.9.0",
+    "vue": "^3.4.3",
+    "vue-router": "^4.2.5"
+  }
 }
