--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "nuxt": "^3.9.0",
+    "nuxt-mongoose": "^1.0.3",
     "vue": "^3.4.3",
     "vue-router": "^4.2.5"
   }
