feat: 참여, 생성 페이지

--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "nuxt": "^3.9.0",
     "nuxt-mongoose": "^1.0.3",
+    "postcss": "^8.4.32",
+    "radix-vue": "^1.2.6",
+    "sass": "^1.69.7",
+    "tailwindcss": "^3.4.0",
     "vue": "^3.4.3",
     "vue-router": "^4.2.5"
   }
