--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "packageManager": "pnpm@8.15.4",
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.9.0",
